tests/NormalTests/paczka1/small_fuzzy/19407981.err
Error in line 3: A164 A344 91,7
Error in line 9: jAr A164 86,1
